[package]
name = "swing-trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.42"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
web3 = "0.18.0"
secp256k1 = "0.21.3"
hex-literal = "0.3.4"
tokio = { version = "1.17.0", features = ["full"] }
chrono = "0.4.19"